# GTRenderer

./: README.md  install.txt  josef.vim  wmiirc
Ref/: ref.txt
SSIM/: SSIM
Tex/: Ablaufplan.aux  Ablaufplan.tex  Rechnung.aux  Rechnung.tex  cgvpub.cls  createLiteratur.sh  grosserbeleg.aux  grosserbeleg.bbl  grosserbeleg.blg  grosserbeleg.dvi  grosserbeleg.lof  grosserbeleg.lot  grosserbeleg.out  grosserbeleg.tex  grosserbeleg.toc  literatur.bib
Tex/images/: UMLZikade.dia  cameraObscura.pdf_tex  cool_random.ods  exStandartAbsorption.pdf_tex  pdb.1UUN.ods  pdb.1UUN.pdf_tex  standartAbsorption.pdf_tex
Vortrag/: literatur.bib  pra.tex
Vortrag/images/: ablauf.pdf_tex  exPartikel.pdf_tex  exStandartAbsorptionDir.pdf_tex  standartAbsorption.pdf_tex
images/: bothImage.pbm  image.back.pbm
raytracer/: .LightSource.cpp.swp  .LightSource.h.swp  Box.cpp  Box.h  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  CudaKernels.cu  CudaKernels.h  DirectionLight.cpp  DirectionLight.h  GTRenderer  GTRenderer.cpp  GTRenderer.h  IntersectionInfo.cpp  IntersectionInfo.h  KDTree.cpp  KDTree.h  LightSource.cpp  LightSource.h  Makefile  Material.cpp  Material.h  OCTracer.cpp  OCTracer.h  PointLight.cpp  PointLight.h  Primitive.h  Ray.h  RayTracer.cpp  RayTracer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Sphere.cpp  Sphere.h  (+6 more)
zikade/: .lightTracer.cpp.swp  .main.cpp.swp  CMakeLists.txt  Makefile  Zikade.dev  Zikade.layout  compile_windows.sh  construct.txt  evaluator.cpp  image.pbm  image2.pbm  kd.cpp  kd.h  light.cpp  light.h  lightTracer.cpp  lightTracer.h  main.cpp  out.pbm  scene.txt  si.cpp  si.h  test.bpm  zikade.cpp  zikade.h
zikade/scenes/: chkpt.raw.scene1.txt  chkpt.raw.scene2.txt  chkpt.raw.scene3.txt  chkpt.raw.scene4.txt  chkpt.raw.scene5.txt  chkpt.raw.scene6.txt  cool_random.scene1.txt  cool_random.scene2.txt  cool_random.scene3.txt  pdb.1UUN.scene1.txt  pdb.1UUN.scene2.txt  pdb.1UUN.scene3.txt  pdb.2BT9.scene1.txt  pdb.2BT9.scene2.txt
